# dbt_duckdb_demo_public

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_USAGE.md  Dockerfile  LICENSE  README.md  SYNC_REF  copy-duckdb-from-docker.sh  docker-compose.yml  docker-entrypoint.sh  docker-seed-volumes.sh  duckdb_connect.sh  pyproject.toml  requirements.txt  requirements_dagster.txt  sync_to_public.sh  workspace.yaml
.dagster/: dagster.yaml
.github/workflows/: ci.yml  docker.yml
dbt/: README.md  dbt_project.yml  package-lock.yml  profiles.yml
dbt/analyses/: silver_transformation_view.sql
dbt/macros/: cast_hash_to_bigint.sql  generate_base_for_hash.sql  generate_model_bronze.sql  generate_model_bronze_latest.sql  generate_model_silver_full_extraction.sql  generate_model_silver_incr_extraction.sql  generate_post_hook_silver.sql  generate_pre_hook_silver.sql  generate_pre_hook_silver_full_refresh.sql
dbt/models/bronze/: __sources.yml  __sources_rfam.yml  bronze_afstemning_latest.sql  bronze_afstemningstype_latest.sql  bronze_aktoer.sql  bronze_aktoer_latest.sql  bronze_aktoertype_latest.sql  bronze_dates.sql  bronze_dates_holidays.sql  bronze_ddd_afstemning_latest.sql  bronze_ddd_afstemningstype_latest.sql  bronze_ddd_aktoer_latest.sql  bronze_ddd_aktoertype_latest.sql  bronze_ddd_moede_latest.sql  bronze_ddd_moedestatus_latest.sql  bronze_ddd_moedetype_latest.sql  bronze_ddd_periode_latest.sql  bronze_ddd_sag_latest.sql  (+33 more)
dbt/seeds/: LKHS_source_systems.csv  _seeds.yml  publicholiday_dk.csv
dbt/tests/: silver_no_duplicate_id_date_valid_from.sql
ddd_python/ddd_dagster/: __init__.py  _constants.py  assets.py  dbt_assets.py  definitions.py  export_assets.py  jobs.py  resources.py  rfam_assets.py  schedules.py  sensors.py
ddd_python/ddd_dbt/: dbt_build_with_unique_logfile.py  generate_dbt_models.py  init_duckdb.py
ddd_python/ddd_dlt/: __init__.py  dlt_pipeline_execution_functions.py  dlt_run_extraction_pipelines_danish_parliament_data.py  dlt_run_extraction_pipelines_rfam.py  export_main_gold_to_fabric_gold.py  export_main_silver_to_fabric_silver.py
ddd_python/ddd_utils/: configuration_variables.py  fabric_capacity_pause_resume.py  get_fabric_onelake_clients.py  get_variables_from_env.py
dlt/: readme.txt
documentation/: build-handbook-builders-edition.sh  build-handbook.sh  dbt_macros.md  handbook-builders-print.css  handbook-builders-theme.css  handbook-pandoc.yaml  handbook-print.css  handbook-theme.css  management-summary.md  modern-data-platform-handbook-builders-edition.md  modern-data-platform-handbook-builders-frontmatter.md  modern-data-platform-handbook-complete.md  modern-data-platform-handbook-frontmatter.md  modern-data-platform-handbook-illustrated.md  modern-data-platform-handbook-v9.3.md  python_libraries.md  silver_model_logic.md
documentation/dbt-docs/: catalog.json  manifest.json
duckdb/: init_duckdb.sh  init_duckdb.sql
tests/: conftest.py  test_configuration_variables.py  test_export_gold.py  test_export_silver.py  test_generate_dbt_models.py  test_integration_bronze.py  test_integration_e2e_pipeline.py  test_integration_gold.py  test_integration_silver_cdc.py  test_json_default.py  test_require_env.py  test_scrub_secrets.py  test_serialize_trace.py
(+117 files in other folders)
