[project]
name = "danish-democracy-data"
version = "1.0.0"
description = "Data engineering pipeline for Danish Parliament open data — extraction, medallion-architecture transformation, and Delta Lake export."
requires-python = ">=3.12"
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "Edwin Weber"}]
dependencies = [
    # Extraction & loading
    "dlt>=1.17,<2",
    "requests>=2.31",
    "python-dotenv>=1.0",

    # Azure / Fabric OneLake
    "adlfs>=2024.7",
    "azure-identity>=1.16",
    "azure-storage-file-datalake>=12.15",

    # Transformation
    "dbt-core>=1.10,<2",
    "dbt-duckdb>=1.9,<2",
    "duckdb>=1.5.1,<1.6",

    # Export to Delta Lake
    "deltalake>=1.0",
    "pyarrow>=17",

    # SQL source pipeline (used by dlt_pipeline_execution_functions.py)
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
]

[project.urls]
Homepage = "https://github.com/edwinweber/dbt_duckdb_demo"
Repository = "https://github.com/edwinweber/dbt_duckdb_demo"
Issues = "https://github.com/edwinweber/dbt_duckdb_demo/issues"

[project.optional-dependencies]
dagster = [
    "dagster>=1.7,<2",
    "dagster-webserver>=1.7,<2",
    "dagster-dbt>=0.28,<0.29",
]
dev = [
    "pytest>=8.0",
    # Test-only dependency (used by test_export_silver.py)
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["ddd_python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
